syntax = "proto3";
package pb.syscall;
option go_package="github.com/iansmith/parigot/api/proto/g/pb/syscall;syscall";
import "pb/protosupport/protosupport.proto";
//import "google/protobuf/any.proto";

// LocateRequest is a read from the kernel of the service id associated with a package, service pair.
message LocateRequest {
    string package_name = 1;
    string service_name = 2;
}

message LocateResponse {
    protosupport.ServiceId service_id = 1;
}